# prompt_eval

./: .HANDOFF.md  .gitignore  AGENTS.md  CLAUDE.md  FINDINGS_judge_sensitivity.md  ISSUES.md  KNOWLEDGE.md  Makefile  PROJECT.md  README.md  dead_code_audit.json  meta-process.yaml  pyproject.toml  truth_surface_drift.yaml  truth_surface_drift.yaml.example
.github/workflows/: test.yml
docs/: API_REFERENCE.md  ARTIFACTS.md  CLAUDE.md  CONCERNS.md  METHODOLOGY.md  PORTFOLIO_EXPERIMENT_SUMMARY.md  UNCERTAINTIES.md  VALIDATION.md  wiki_manifest.yaml
docs/adr/: 0001-llm-client-substrate-boundary.md  0002-prompt-eval-run-family-mapping.md  0003-explicit-experiment-semantics.md  0004-growing-acceptable-set-evaluator.md  0005-statistical-inference-boundary.md  0006-prompt-asset-preference-and-scope-boundary.md  0007-paired-by-input-comparison-mode.md  0008-portfolio-prompt-eval-evidence-boundary.md  CLAUDE.md  README.md
docs/archive/: README.md
docs/notebooks/: 01_precomputed_variant_comparison.ipynb
docs/ops/: CAPABILITY_DECOMPOSITION.md  METHODOLOGY_REVIEW_CASE_SET.md  TRUTH_SURFACE_PILOT_STATUS.md  TRUTH_SURFACE_RENDERED_STATUS.md  TRUTH_SURFACE_STATUS.md  truth_surface_governed_audit.json
docs/plans/: 01_master-roadmap.md  02_shared-observability-boundary.md  03_prompt-asset-and-scope-boundary.md  04_documentation-surface-hardening.md  CLAUDE.md  (+13 more)
enforced_planning/: concern_routing.py  coordination_claims.py  coordination_consistency.py  doc_authority.py  push_safety.py  session_contracts.py  session_lifecycle.py
experiments/: deepeval_comparison.md
hooks/: CLAUDE.md  post-commit  pre-commit  pre-push
prompt_eval/: CLAUDE.md  __init__.py  agent_spec.py  evaluators.py  experiment.py  experiment_eval.py  golden_set.py  mcp_server.py  observability.py  optimize.py  prompt_assets.py  prompt_templates.py  query.py  runner.py  scoring.py  stats.py  store.py
prompts/: truth_surface_semantic_review.yaml
scripts/: CLAUDE.md  check_dead_code.py  check_markdown_links.py  check_truth_surface_drift.py  evaluate_methodology_review_cases.py  register_schemas.py  relationships.yaml  render_truth_surface_status.py  review_truth_surface_semantic.py  truth_surface_semantic_models.py
tests/: CLAUDE.md  conftest.py  test_agent_spec.py  test_evaluators.py  test_experiment.py  test_golden_set.py  test_mcp_server.py  test_methodology_review_case_set.py  test_optimize.py  test_prompt_assets.py  test_query.py  test_runner.py  test_stats.py  test_store.py
(+35 files in other folders)
