[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-eval"
version = "0.2.0"
description = "A/B prompt testing and evaluation. Compare prompt variants with statistical rigor."
requires-python = ">=3.10"
dependencies = [
    "llm-client>=0.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
mcp = [
    "fastmcp>=0.1.0",
]

[project.scripts]
prompt-eval-mcp = "prompt_eval.mcp_server:main"

[tool.setuptools.packages.find]
include = ["prompt_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
