[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-eval"
version = "0.2.0"
description = "A/B prompt testing and evaluation. Compare prompt variants with statistical methods."
requires-python = ">=3.10"
dependencies = [
    "llm-client>=0.3.0",
    "pydantic>=2.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "vulture>=2.16",
]
mcp = [
    "fastmcp>=0.1.0",
]

[project.scripts]
prompt-eval-mcp = "prompt_eval.mcp_server:main"

[tool.setuptools.packages.find]
include = ["prompt_eval*"]

[tool.setuptools.package-data]
prompt_eval = ["prompts/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
files = ["prompt_eval", "tests"]
mypy_path = "../llm_client"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true
